_css/main.scss
/* ... */
.vertical-center-row {
  display: table-cell;
  vertical-align: middle;
  width: 100%;
}

.profile-container {
  background-color: $general-background;

  .nav-tabs {
    border:1px solid transparent;
    margin-bottom: 35px;
  }

  .nav-tabs > li {
    width: 50%;
  }

  .nav-tabs > li > .nav-link {
    border-radius: 0;
    border-bottom: 1px solid #dee2e6;
    border-left: 1px solid #dee2e6;
    border-right: 1px solid #dee2e6;
    color: $primary-color;
    background-color: #FFFFFF;
  }

  .nav-tabs > li > .nav-link:hover {
    border-top: 1px solid transparent;
  }

  .nav-tabs > li.active > .nav-link {
    border-radius: 0;
    border-right: 1px solid #dee2e6;
    border: 1px solid transparent;
    color: $primary-color;
    background-color: $general-background;
  }

  a.accordion-toggle {
    display: block;
    padding: 10px 15px;
    text-decoration: none;
    width: 100%;
  }

  div.panel-heading {
    padding: 0;
  }

  .panel-group {
    margin: 0;

    .panel {
      border-bottom: 1px solid rgba(0, 0, 0, 0.175);
      border-right: 0;
      border-left: 0;
      border-top: 0;
      border-radius: 0;

      + .panel {
        margin-top: 0;
      }

      .panel-heading {
        border-top-right-radius: 0;
        border-top-left-radius: 0;
        height: 60px;

        .panel-title {
          display: flex;
          align-items: center;
          height: 100%;
        }

        + .panel-collapse {
          > .panel-body {
            border-top: 0;

            .container {
              padding-right: 0;
              padding-left: 0;
            }
          }
        }
      }
    }
  }
}

.project {
  margin-left: auto;
  margin-right: auto;
  padding-top: 15px;
  padding-bottom: 15px;

  .project-image-container {
    margin-bottom: 20px;
  }

  .project-image {
      margin: auto;
      -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
      box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.375);
      border-radius: 3px;
      border: 1px solid #d4d4d4;
  }

  .project-info {
    padding-left: 15px;
    padding-right: 15px;
    text-align: justify;

    .project-features {
      font-size: 16px;
      margin-top: 10px;
      color: $secondary-text-color;
    }

    h1 {
      font-size: 26px;
      color: $primary-text-color;
    }

    p {
      color: $secondary-text-color;
    }

    .btn-default {
      border-color: $primary-color;
      color: $primary-color;
      font-size: $font-size-base;
    }
  }
}

.profile-container.container-fluid {
  padding-left: 0;
  padding-right: 0;
}

.who-am-i-container {
  background-color: $primary-color-dark;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
  -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);

  .who-am-i {
    padding-top: 50px;
    padding-bottom: 50px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    max-width: 1100px;
    color: #FFFFFF;

    .who-am-i-description {
      text-align: center;
      margin: 0;
      padding-left: 15px;
      padding-right: 15px;

      h1 {
        color: #FFFFFF;
      }

      p {
        color: $primary-color-light;
      }
    }

    .who-am-i-icons {

      img {
        max-width: 50px;
        max-height: 50px;
        width: auto;
        height: auto;
        margin: 20px 10px;
        display: inline;
      }

      .who-am-i-big-icon {
        max-width: 80px;
        max-height: 80px;
      }
    }
  }
}

@include media-breakpoint-up(xs) {
  .break {
    display: none;
  }
}

@include media-breakpoint-up(sm) {
  .profile-introduction {
    font-size: 28px;

    .center-content {
      background-color: transparent;
      h1 {
        font-size: 42px;
      }
      h3 {
        font-size: 30px;
      }
      &.center-content-buttons {
        width: 270px;

        .profile-icon {
          font-size: 0.7em;
          line-height: 50px;
          height: 50px;
        }
      }
    }

    .img-responsive {
      width: 150px;
      height: 150px;
      border-radius: 75px;
    }
  }

  .project {
    .project-info {
      padding-left: 15px;
      padding-right: 15px;

      h1 {
        margin: 0;
        font-size: 30px;
      }

      p {
        margin-top: 10px;
      }
    }
  }

  footer {
    font-size: 16px;
  }
}

@include media-breakpoint-up(md) {
  .profile-introduction {
    .center-content {
      &.center-content-buttons {
        width: 250px;

        .profile-icon {
          font-size: 0.8em;
          line-height: 50px;
          height: 50px;
        }
      }
    }
  }

  .who-am-i-container {

    .who-am-i {
      max-width: 1100px;

      .who-am-i-icons {

        img {
          max-width: 80px;
          max-height: 80px;
        }

        .who-am-i-big-icon {
          max-width: 150px;
          max-height: 150px;
        }
      }
    }
  }
}

@include media-breakpoint-up(lg) {
  .phone-number {
    display: none;
  }

  .project {
    max-width: 1100px;
  }

  .who-am-i-container {

    .who-am-i {
      max-width: 1100px;

      .who-am-i-description {
        margin: 0;
        padding-left: 0;
        padding-right: 0;
      }

      .who-am-i-icons {

        img {
          max-width: 80px;
          max-height: 80px;
        }

        .who-am-i-big-icon {
          max-width: 150px;
          max-height: 150px;
        }
      }
    }
  }
}

/***************** Timeline *****************/

.timeline {
  list-style: none;
  padding: 20px 0 20px;
  position: relative;
  text-align: left;
  margin: 0;
}

@include media-breakpoint-up(md) {
  .timeline {
    text-align: justify;
  }
}

.timeline:before {
  top: 0;
  bottom: 0;
  position: absolute;
  content: " ";
  width: 3px;
  background-color: #eeeeee;
  left: 50%;
  margin-left: -1.5px;
}

.timeline > li {
  padding-bottom: 20px;
  position: relative;
}

.timeline > li:before, .timeline > li:after {
  content: " ";
  display: table;
}

.timeline > li:after {
  clear: both;
}
/* ... */

